Minor update to code quality/json enabled
- DONE: Code cleanup, unnecessary comments removed
- pages.json created as an example of crawling in action
- still TODO: fix spider getting stuck

--- a/se/test.html
+++ b/se/test.html
@@ -10,8 +10,9 @@
 <body>
   <a href="https://google.com">Google</a><br>
   <!-- <a href="https://apple.com">Apple</a><br> -->
-  <a href="./test1.html">relative</a><br>
-  <a href="./test2.html">relative2</a><br>
+  <!-- <a href="./test1.html">relative</a><br> -->
+  <!-- <a href="./test2.html">relative2</a><br> -->
+  <a href="https://heydavid.kim">My website</a><br>
   <!-- <a href="//www.youtube.com/upload">YouTube Upload</a><br> -->
   <!-- <a href="../../anotherpage.php">nested (fake)</a><br>
   <a href="/test/another/../../anotherpage.php">relative & nested (fake)</a><br>
